# ebag-cli

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ebag-api-notes.md
ebag_cli/: __init__.py  cli.py  client.py
tests/: test_cli.py
