[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ebag-cli"
version = "0.1.0"
description = "Unofficial command-line client for the Bulgarian grocery site ebag.bg"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jaap Oosterbroek" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "respx>=0.21"]

[project.scripts]
ebag = "ebag_cli.cli:app"

[tool.setuptools.packages.find]
include = ["ebag_cli*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
